feat: добавлена миграция бд, сущности, сервисы и контроллеры. in_progress: работа по добавлению security, тестов и рефакторинг